# kmeans_c

./: CMakeLists.txt  README.md  kmeans.c  kmeans.cl  kmeans.h  kmeans_opencl.c  kmeans_opencl.h  main.c  plot.py  ui.c
.github/workflows/: cmake.yml
